INTYGFV-16522: Updated tests